# fail2ban-calico

./: Cargo.toml  Dockerfile
.github/workflows/: main.yml
k8s/: config.yaml  daemonset.yaml  policy.yaml  rbac.yaml
rootfs/etc/services.d/fail2ban/: run
src/: main.rs
src/calico/: all.rs  mod.rs
