[package]
name = "fail2ban-calico"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.50"
confy = { git = "https://github.com/rust-cli/confy", version = "0.4.0", default-features = false, features = ["yaml_conf"] }
env_logger = "0.9.0"
k8s-openapi = { version = "0.13.1", default-features = false, features = ["v1_22"] }
kube = { version = "0.64.0", default-features = false, features = ["client", "derive", "rustls-tls"] }
log = "0.4.14"
schemars = "0.8.8"
serde = "1.0.130"
serde_json = "1.0.72"
structopt = "0.3.25"
strum = "0.23.0"
strum_macros = "0.23.1"
tokio = { version = "1.14.0", features = ["rt", "macros"] }